--- a/src/compontnts/TopLeftCard.css
+++ b/src/compontnts/TopLeftCard.css
@@ -1,3 +1,37 @@
-.card-container{
-    
+.card-container {
+  height: 580px;
+  width: 480px;
+  background: #fdfdfd;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px -4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+}
+.card-top{
+    background-color: #000;
+    height: 50px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    position: relative;
+}
+.top-heading{
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    font-weight: 400;
+    padding-top: 10px;
+}
+.info-icon{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    /* display: inline; */
+    height: 25px;
+    width: 25px;
+    color: white;    
+}
+.description-part{
+    padding: 18px 8px;
+    font-size: 16px;
+}
+.d-title{
+    font-weight: bold;
 }
