--- a/src/pages/sections/Hero/Hero.css
+++ b/src/pages/sections/Hero/Hero.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
     align-items: center;
 }
-button{
+.hero-btn{
     background-color: #0029FF;
     color: white;
     border: none;
